# PubScience

./: .gitignore  README.md  config.yaml  pyproject.toml
_usecases/: example_association_mining.ipynb  rpca.py
assets/: README.md
assets/dt4h_cardioccc_ann-transfer_b1+b2_bundle/: README.md
examples/label/: ex1_medical_nonmedical.py  ex2_ODIN_labeling.py  ex3_ARGUS_radio.py
examples/translate/api/: ex10_jsonl_from_disk_ApolloBooks.py  ex1_jsonl_from_disk_OpenGuidelines.py  ex4_jsonl_from_disk_PMCPatients.py
examples/translate/llm/: ex10_jsonl_from_disk_ApolloBooks.py  ex11_jsonl_from_disk_ApolloPapers.py  ex12_jsonl_from_disk_mimicCXR.py  ex13_jsonl_from_disk_medQA.py  ex14_jsonl_from_disk_medSymDis.py  ex15_jsonl_from_disk_bioasq.py  ex16_jsonl_from_disk_bioasq_similarity.py  ex17_miriad_from_hf.py  ex1_jsonl_from_disk_OpenGuidelines.py  ex3_text_from_disk_BioLordDefs.py  ex4_jsonl_from_disk_PMCPatients.py  ex5_csvl_from_disk_MIMIC4_radio.py  ex6_csvl_from_disk_MIMIC3.py  ex6_csvl_from_disk_MIMIC3_v2.py  ex6_csvl_from_disk_MIMIC3_v2_2.py  ex7_csvl_from_disk_MIMIC4_discharge.py  ex8_csvl_from_disk_pubmedCVD.py  ex8_csvl_from_disk_pubmedCVD_abstracts.py  ex9_jsonl_from_disk_ApolloGuidelines.py
examples/translate/ntm/: bash_run_ex12.sh  ex10_jsonl_from_disk_ApolloBooks.py  ex11_jsonl_from_disk_ApolloWiki.py  ex12_pubmed.py  ex2_text_from_disk_AGCT.py  ex6_csvl_from_disk_MIMIC3.py  ex9_jsonl_from_disk_ApolloGuidelines.py
pubscience/anonymise/: README.md  deduce.py
pubscience/clean/: cleaner.py  parse_pubmed_abstracts.ipynb
pubscience/clean/config/: settings.yaml
pubscience/enrich/: README.md  graph.py  relationship.py
pubscience/examples/: ex10_jsonl_from_disk_ApolloBooks.py  ex1_jsonl_from_disk_OpenGuidelines.py  ex2_text_from_disk_AGCT.py  ex4_jsonl_from_disk_PMCPatients.py  ex5_csvl_from_disk_MIMIC4_radio.py  ex6_csvl_from_disk_MIMIC3.py  ex9_jsonl_from_disk_ApolloGuidelines.py
pubscience/identify/: README.md  identify.py
pubscience/identify/config/: settings.yaml
pubscience/label/: README.md  text.py
pubscience/label/config/: settings.yaml  settings_odin.yaml
pubscience/parse/: pdf.py
pubscience/retrieve/: extract_atc_dictionary.py  output.jsonl  retrieve_atc.py  retrieve_atc_desc.py
pubscience/retrieve/OAI/: .env  get_links.py  get_pdf.py  oai.py  test_sickle.ipynb
pubscience/retrieve/arxiv/: arxiv_api.py  download_by_keyword_from_arxiv.py
pubscience/retrieve/medrxiv/: .get_biorxiv.r.swp  clean_txt.py  get_biorxiv.r  write_txt.r
pubscience/retrieve/output/: WHO ATC-DDD 2024-09-25.tsv
pubscience/retrieve/pubmed/: README.md  parse_abstracts.py  parse_fulltext.py  run_list_abstract.sh  run_list_full.sh  searchterms.txt
pubscience/share/: collect_ann.py  huggingface.py  ner_caster.py
pubscience/transform/: README.md  text.py
pubscience/transform/config/: settings.yaml
pubscience/translate/: README.md  api.py  cleaner.py  custom_translate.py  custom_translate_google.py  google.py  llm.py  llm_batch.py  ntm.py  ntm_finetune.py  tpu.py  translate.py
pubscience/translate/config/: settings.yaml
pubscience/utils/: txt_randomizer.py
sandbox/: argus_deid_to_json.ipynb  atc_filter_biolord.ipynb  deid_testing.ipynb  example_association_mining.ipynb  extract_ntvg_samples.ipynb  identify_testing.ipynb  pubmed_abstracts.ipynb  spacy_ner_for_deid.ipynb  stats_testing.ipynb  test_spurious_repetitions.ipynb  translation_testing.ipynb
sandbox/.ipynb_checkpoints/: example_association_mining-checkpoint.ipynb
scripts/: GCS_TRANSFER_README.md  README.txt  move_to_gcs.py  run_gcs_transfer.sh
src/pubscience/: ld_lib_export.sh
src/pubscience/clean/: README.md  parse_pubmed_abstracts.ipynb
src/pubscience/deduplicate/: deduplicater.py
src/pubscience/embedder/: embedder.py
src/pubscience/enrich/: keywords.py  topic.py
src/pubscience/identify/: identify.py
src/pubscience/label/: README.md  text.py  unsloth_chat_templates.py
src/pubscience/parse/: README.md  pdf.py  pubtator.py
src/pubscience/retrieve/: huggingface.py  retrieve_atc.py
src/pubscience/share/: README.md  config.py  huggingface.py  ner_caster.py
src/pubscience/transform/: text.py
(+37 files in other folders)
