[tool.poetry]
name = "pubscience"
version = "0.1.0"
description = ""
authors = ["Bram van Es <bramiozo@gmail.com>"]
packages = [{from="src", include="pubscience"}]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
deepl = "^1.18.0"
google-cloud = "^0.34.0"
python-dotenv = "^1.0.1"
openai = "^1.44.1"
pandas = "^2.2.2"
py7zr = "^0.22.0"
google-cloud-translate = ">=3.16.0"
google-genai = ">=1.9.0"
pydantic = "^2.8.2"
anthropic = "^0.34.1"
ftfy = "^6.2.3"
python-benedict = "^0.33.2"
groq = "^0.11.0"
datasets = "^3.0.0"
accelerate = "^0.34.2"
sentencepiece = "^0.2.0"
nltk = "^3.9.1"
torch = { version = "2.6.0", source = "torch" }
triton-windows = "3.2.0.post19"
#torch = "^2.5.1"
transformers = "^4.45.1"
zstandard = "^0.23.0"
pyreadstat = "^1.2.8"
sas7bdat = "^2.2.3"
lxml = "^5.3.0"
pysbd = "^0.3.4"
bitsandbytes = "^0.45.0"
cachetools = "^5.5.0"
sacremoses = "^0.1.1"
httpx = "^0.28.1"
xformers = "^0.0.29"
deduce = "^3.0.3"
phonenumbers = "^8.13.52"
scikit-learn = "^1.6.0"
spacy = "^3.8.3"
polars = "^1.19.0"
unsloth = "^2025.8.1"
pypdf = "^6.0.0"
umap-learn = "^0.5.9.post2"
pdfplumber = "^0.11.7"
paddleocr = "^3.2.0"
pdf2image = "^1.17.0"
langdetect = "^1.0.9"
azure-identity = "^1.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"